--- a/index.html
+++ b/index.html
@@ -26,59 +26,8 @@
             <p>I like to have fun by learning new things and always testing myself</p>
         </section>
 
-        <!-- Projects -->
         <section>
-            <h2>Featured Projects</h2>
-            <div class="projects">
-                <!-- Project 1 -->
-                <article class="project-card">
-                    <img src="https://via.placeholder.com/300x150" alt="Project screenshot">
-                    <h3>Portfolio Site</h3>
-                    <p>A responsive static site built with HTML, CSS, and vanilla JavaScript.</p>
-                    <a href="https://github.com/janedoe/portfolio">View on GitHub →</a>
-                </article>
-
-                <!-- Project 2 -->
-                <article class="project-card">
-                    <img src="https://via.placeholder.com/300x150" alt="Project screenshot">
-                    <h3>Task Tracker API</h3>
-                    <p>RESTful API written in Go, backed by PostgreSQL, with JWT authentication.</p>
-                    <a href="https://github.com/janedoe/task-tracker">View on GitHub →</a>
-                </article>
-
-                <!-- Project 3 -->
-                <article class="project-card">
-                    <img src="https://via.placeholder.com/300x150" alt="Project screenshot">
-                    <h3>Chatbot Demo</h3>
-                    <p>Python Flask chatbot using OpenAI's GPT‑4 API, deployed on Railway.</p>
-                    <a href="https://github.com/janedoe/chatbot-demo">View on GitHub →</a>
-                </article>
-            </div>
-        </section>
-
-        <!-- Skills -->
-        <section class="skills">
-            <h2>Technical Skills</h2>
-            <ul>
-                <li>JavaScript / TypeScript</li>
-                <li>React / Vue</li>
-                <li>Node.js / Express</li>
-                <li>Python / Django</li>
-                <li>Go</li>
-                <li>PostgreSQL / MySQL</li>
-                <li>Docker / Kubernetes</li>
-                <li>Git / CI‑CD</li>
-                <li>HTML5 / CSS3</li>
-                <li>Responsive Design</li>
-            </ul>
-        </section>
-
-        <!-- Contact -->
-        <section>
-            <h2>Get In Touch</h2>
-            <p>Email: <a href="mailto:isaacbrowen.work@gmail.com">isaacbrowen.work@gmail.com</a></p>
-            <p>LinkedIn: <a href="https://linkedin.com/in/isaacbrowen" target="_blank">linkedin.com/in/isaacbrowen</a>
-            </p>
+            <a href="profile-overview.html">link text</a>
         </section>
     </main>
 
@@ -88,3 +37,4 @@
 </body>
 
 </html>
+
