--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
         <section>
             <a href="/profile-overview.html">See what I've worked on</a>
+            <a href="/IsaacBrowenPortfolio.html">See what I've worked on</a>
         </section>
     </main>
 
