--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </section>
 
         <section>
-            <a href="/profile-overview.html">See what I've worked on</a>
+            <a href="/portfolio-overview.html">See what I've worked on</a>
             <a href="/IsaacBrowenPortfolio.html">See what I've worked on</a>
         </section>
     </main>
